<resources>
    <string name="app_name">MyGitHub</string>
    <string name="main_title_home">主页</string>
    <string name="main_title_notifications">通知</string>
    <string name="main_title_search">探索</string>
    <string name="main_title_profile">个人资料</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>